<resources>
    <string name="app_name">AndroidScrumBoard</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="user_name">User Name</string>
    <string name="e_mail">E-mail</string>
    <string name="search">Search</string>
    <string name="password">Password</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="menu_projects">Projects</string>
    <string name="menu_new_project">New Project</string>
    <string name="menu_edit_profile">Edit Profile</string>
    <string name="menu_settings">Settings</string>
    <string name="log_in">Log In</string>
    <string name="sign_up">Sign Up</string>
    <string name="log_out">Log Out</string>
</resources>
