<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/mobile_navigation"
            app:startDestination="@+id/nav_home">

    <fragment
            android:id="@+id/nav_home"
            android:name="com.roman.androidscrumboard.ui.projects.ProjectsFragment"
            android:label="@string/menu_projects"
            tools:layout="@layout/fragment_projects"/>

    <fragment
            android:id="@+id/nav_gallery"
            android:name="com.roman.androidscrumboard.ui.newProject.NewProjectFragment"
            android:label="@string/menu_new_project"
            tools:layout="@layout/fragment_new_project"/>

    <fragment
            android:id="@+id/nav_slideshow"
            android:name="com.roman.androidscrumboard.ui.editProfile.EditProfileFragment"
            android:label="@string/menu_edit_profile"
            tools:layout="@layout/fragment_edit_profile"/>

    <fragment
            android:id="@+id/nav_tools"
            android:name="com.roman.androidscrumboard.ui.settings.SettingsFragment"
            android:label="@string/menu_settings"
            tools:layout="@layout/fragment_settings"/>

</navigation>