<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.register.RegisterActivity"
        android:background="@drawable/bg_login">

    <androidx.constraintlayout.widget.Guideline
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintGuide_begin="24dp"
            android:id="@+id/guideline_left"/>

    <androidx.constraintlayout.widget.Guideline
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintGuide_end="24dp"
            android:id="@+id/guideline_right"/>

    <ImageView
            android:id="@+id/main_image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="40dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline_left"
            app:layout_constraintEnd_toStartOf="@+id/guideline_right"
            app:srcCompat="@drawable/checkmark"/>

    <EditText
            android:id="@+id/sign_up_user_name_edit_text"
            android:theme="@style/EditTextTheme"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:inputType="text"
            android:textColor="@color/white"
            android:hint="@string/user_name"
            android:textColorHint="@color/hintColor"
            app:layout_constraintStart_toStartOf="@id/guideline_left"
            app:layout_constraintEnd_toStartOf="@id/guideline_right"
            app:layout_constraintTop_toBottomOf="@+id/main_image"
    />

    <EditText
            android:id="@+id/sign_up_e_mail_edit_text"
            android:theme="@style/EditTextTheme"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:inputType="textEmailAddress"
            android:textColor="@color/white"
            android:hint="@string/e_mail"
            android:textColorHint="@color/hintColor"
            app:layout_constraintStart_toStartOf="@id/guideline_left"
            app:layout_constraintEnd_toStartOf="@id/guideline_right"
            app:layout_constraintTop_toBottomOf="@+id/sign_up_user_name_edit_text"/>

    <EditText
            android:id="@+id/sign_up_password_edit_text"
            android:theme="@style/EditTextTheme"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:inputType="textPassword"
            android:textColor="@color/white"
            android:hint="@string/password"
            android:textColorHint="@color/hintColor"
            app:layout_constraintStart_toStartOf="@id/guideline_left"
            app:layout_constraintEnd_toStartOf="@id/guideline_right"
            app:layout_constraintTop_toBottomOf="@+id/sign_up_e_mail_edit_text"/>

    <EditText
            android:id="@+id/sign_up_repeat_password_edit_text"
            android:theme="@style/EditTextTheme"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:inputType="textPassword"
            android:textColor="@color/white"
            android:hint="@string/repeat_password"
            android:textColorHint="@color/hintColor"
            app:layout_constraintStart_toStartOf="@id/guideline_left"
            app:layout_constraintEnd_toStartOf="@id/guideline_right"
            app:layout_constraintTop_toBottomOf="@+id/sign_up_password_edit_text"/>

    <Button
            android:id="@+id/sign_up_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/sign_up"
            android:textColor="@color/white"
            android:backgroundTint="@color/colorPrimary"
            app:layout_constraintEnd_toStartOf="@id/guideline_right"
            app:layout_constraintStart_toStartOf="@id/guideline_left"
            app:layout_constraintTop_toBottomOf="@id/sign_up_repeat_password_edit_text"/>

</androidx.constraintlayout.widget.ConstraintLayout>