<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.logIn.LogInActivity"
        android:background="@drawable/bg_login">

    <androidx.constraintlayout.widget.Guideline
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintGuide_begin="24dp"
            android:id="@+id/guideline_left"/>

    <androidx.constraintlayout.widget.Guideline
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintGuide_end="24dp"
            android:id="@+id/guideline_right"/>

    <ImageView
            android:id="@+id/log_in_image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="40dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline_left"
            app:layout_constraintEnd_toStartOf="@+id/guideline_right"
            app:srcCompat="@drawable/checkmark"/>

    <ProgressBar
            android:id="@+id/log_in_progress_bar"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="40dp"
            android:progressDrawable="@drawable/progress_bar_style"
            android:indeterminateTint="@color/white"
            android:visibility="gone"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline_left"
            app:layout_constraintEnd_toStartOf="@+id/guideline_right"/>

    <EditText
            android:id="@+id/log_in_user_name_edit_text"
            android:theme="@style/EditTextTheme"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:inputType="text"
            android:textColor="@color/white"
            android:hint="@string/user_name"
            android:textColorHint="@color/hintColor"
            app:layout_constraintStart_toStartOf="@id/guideline_left"
            app:layout_constraintEnd_toStartOf="@id/guideline_right"
            app:layout_constraintTop_toBottomOf="@+id/log_in_image"
    />

    <EditText
            android:id="@+id/log_in_password_edit_text"
            android:theme="@style/EditTextTheme"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:inputType="textPassword"
            android:textColor="@color/white"
            android:hint="@string/password"
            android:textColorHint="@color/hintColor"
            app:layout_constraintStart_toStartOf="@id/guideline_left"
            app:layout_constraintEnd_toStartOf="@id/guideline_right"
            app:layout_constraintTop_toBottomOf="@+id/log_in_user_name_edit_text"/>

    <Button
            android:id="@+id/log_in_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/log_in"
            android:textColor="@color/white"
            android:backgroundTint="@color/colorPrimary"
            app:layout_constraintEnd_toStartOf="@id/guideline_right"
            app:layout_constraintStart_toStartOf="@id/guideline_left"
            app:layout_constraintTop_toBottomOf="@id/log_in_password_edit_text"/>

    <Button
            android:id="@+id/log_in_to_register_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/sign_up"
            android:textColor="@color/white"
            android:background="?android:attr/selectableItemBackground"
            app:layout_constraintEnd_toStartOf="@id/guideline_right"
            app:layout_constraintStart_toStartOf="@id/guideline_left"
            app:layout_constraintTop_toBottomOf="@id/log_in_button"/>

</androidx.constraintlayout.widget.ConstraintLayout>